--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -45,7 +45,8 @@
   left:-1px !important;
   background-color: rgb(218, 238, 255);
   transition: all;
-  transition-duration: .1s;
+  transition-duration: .2s;
+  transition-timing-function: ease-in;
   height: 100%;
   opacity:0;
   width:3px;
@@ -64,7 +65,7 @@
   left:0px !important;
   background-color: rgb(218, 238, 255);
   transition: all;
-  transition-duration: .1s;
+  transition-duration: .2s;
   width:100% !important;
   opacity:0;
   height:3px;
