--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -22,6 +22,15 @@
   .xcolr{
     @apply flex-col-reverse
   }
+  .to-tl{transform-origin: 0% 0% !important;}
+  .to-tc{transform-origin: 50% 0% !important;}
+  .to-tr{transform-origin: 100% 0% !important;}
+  .to-cl{transform-origin: 0% 50% !important;}
+  .to-cc{transform-origin: 50% 50% !important;}
+  .to-cr{transform-origin: 100% 50% !important;}
+  .to-bl{transform-origin: 0% 100% !important;}
+  .to-bc{transform-origin: 50% 100% !important;}
+  .to-br{transform-origin: 100% 100% !important;}
 }
 /* background-img */
 .bg-base{
