--- a/src/parts/aq-componets/transition/css/fade.css
+++ b/src/parts/aq-componets/transition/css/fade.css
@@ -1,9 +1,25 @@
-.aq-transition-vessel .fade-enter-from,.aq-transition-vessel .fade-leave-to {
+.aq-transition-vessel>.fade-enter-from,.aq-transition-vessel>.fade-leave-to {
   opacity: 0;
 }
-.aq-transition-vessel .fade-enter-active{
+.aq-transition-vessel>.fade-enter-active{
   transition: all var(--enter) var(--entertiming);
 }
-.aq-transition-vessel .fade-leave-active{
+.aq-transition-vessel>.fade-leave-active{
   transition: all var(--leave) var(--leavetiming);
+}
+
+/* transition-group */
+.aq-transition-group>.container>.fade-move,
+.aq-transition-group>.container>.fade-enter-active{
+  transition: all var(--enter) var(--entertiming);
+}
+.aq-transition-group>.container>.fade-leave-active {
+  transition: all var(--leave) var(--leavetiming);
+}
+.aq-transition-group>.container>.fade-enter-from,
+.aq-transition-group .container .fade-leave-to {
+  opacity: 0;
+}
+.aq-transition-group>.container>.fade-leave-active {
+  position: absolute;
 }
