--- a/src/parts/aq-componets/transition/css/growy.css
+++ b/src/parts/aq-componets/transition/css/growy.css
@@ -1,11 +1,29 @@
-.aq-transition-vessel .growy-enter-from,
-.aq-transition-vessel .growy-leave-to {
+/* transition */
+.aq-transition-vessel>.growy-enter-from,
+.aq-transition-vessel>.growy-leave-to {
   overflow: hidden;
   height:0px !important;
 }
-.aq-transition-vessel .growy-enter-active{
+.aq-transition-vessel>.growy-enter-active{
   transition: all var(--enter) var(--entertiming);
 }
-.aq-transition-vessel .growy-leave-active{
+.aq-transition-vessel>.growy-leave-active{
   transition: all var(--leave) var(--leavetiming);
+}
+
+/* transition-group */
+.aq-transition-group>.container>.growy-move,
+.aq-transition-group>.container>.growy-enter-active{
+  transition: all var(--enter) var(--entertiming);
+}
+.aq-transition-group>.container>.growy-leave-active {
+  transition: all var(--leave) var(--leavetiming);
+}
+.aq-transition-group>.container>.growy-enter-from,
+.aq-transition-group .container .growy-leave-to {
+  opacity: 0;
+  transform: scaleY(0.01) translate(0px, 0);
+}
+.aq-transition-group>.container>.growy-leave-active {
+  position: absolute;
 }
