--- a/src/parts/aq-componets/transition/css/fade.css
+++ b/src/parts/aq-componets/transition/css/fade.css
@@ -1,4 +1,13 @@
-.aq-transition-vessel>.fade-enter-from,.aq-transition-vessel>.fade-leave-to {
+.aq-transition-vessel>.fade-enter-from,
+.aq-transition-vessel>.fade-enter-active,
+.aq-transition-vessel>.fade-enter-to,
+.aq-transition-vessel>.fade-leave-from,
+.aq-transition-vessel>.fade-leave-active,
+.aq-transition-vessel>.fade-leave-to{
+  position:var(--cellposition) !important;
+}
+.aq-transition-vessel>.fade-enter-from,
+.aq-transition-vessel>.fade-leave-to {
   opacity: 0;
 }
 .aq-transition-vessel>.fade-enter-active{
