--- a/src/parts/aq-componets/transition/css/flipy.css
+++ b/src/parts/aq-componets/transition/css/flipy.css
@@ -1,3 +1,11 @@
+.aq-transition-vessel>.flipy-enter-from,
+.aq-transition-vessel>.flipy-enter-active,
+.aq-transition-vessel>.flipy-enter-to,
+.aq-transition-vessel>.flipy-leave-from,
+.aq-transition-vessel>.flipy-leave-active,
+.aq-transition-vessel>.flipy-leave-to{
+  position:var(--cellposition) !important;
+}
 .aq-transition-vessel>.flipy-enter-from{
   transform: rotateY(-90deg);
   opacity: 0;
