--- a/src/parts/aq-componets/transition/css/zoomin.css
+++ b/src/parts/aq-componets/transition/css/zoomin.css
@@ -1,3 +1,11 @@
+.aq-transition-vessel>.zoomin-enter-from,
+.aq-transition-vessel>.zoomin-enter-active,
+.aq-transition-vessel>.zoomin-enter-to,
+.aq-transition-vessel>.zoomin-leave-from,
+.aq-transition-vessel>.zoomin-leave-active,
+.aq-transition-vessel>.zoomin-leave-to{
+  position:var(--cellposition) !important;
+}
 .aq-transition-vessel>.zoomin-enter-from{
   transform: scale(0.95);
   opacity: 0;
