--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -44,10 +44,10 @@
   background-position: 0% 100%;
 }
 .bg-texture{
-  background-image: url('../img/texture-bg.jpeg');
+  background-image: url('../img/texture-bg2.jpg');
   background-repeat: no-repeat;
-  background-position: 100% 50%;
-  background-size:100% 200%;
+  background-position: 0% 0%;
+  background-size:120% 50%;
   background-size: fill;
 }
 .bg-blue{
