--- a/src/parts/aq-componets/transition/css/scrollleft.css
+++ b/src/parts/aq-componets/transition/css/scrollleft.css
@@ -7,7 +7,8 @@
   position:var(--cellposition) !important;
 }
 .aq-transition-vessel>.scrollleft-enter-from {
-  transform: translateX(100%);
+  transform: translateX(105%);
+  opacity: 0;
 }
 .aq-transition-vessel>.scrollleft-leave-to {
   transform: translateX(-100%);
