完成接口请求配置

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,9 +7,15 @@
 @tailwind utilities;
 
 @layer utilities{
+  /* 按钮 */
   .btn{
     @apply cursor-pointer hover:contrast-75
   }
+  /* v-cloak */
+  [v-cloak] {
+    display: none;
+  }
+  /* flex布局 */
   .xcol,.xrow,.xcolr,.xrowr{
     @apply flex
   }
@@ -25,6 +31,7 @@
   .xcolr{
     @apply flex-col-reverse
   }
+  /* dom 中心位置 */
   .to-tl{transform-origin: 0% 0% !important;}
   .to-tc{transform-origin: 50% 0% !important;}
   .to-tr{transform-origin: 100% 0% !important;}
@@ -34,191 +41,25 @@
   .to-bl{transform-origin: 0% 100% !important;}
   .to-bc{transform-origin: 50% 100% !important;}
   .to-br{transform-origin: 100% 100% !important;}
-}
-/* background-img */
-.bg-base{
-  background-color: #ebf2fa;
-  background-image: url('../img/bg-base.jpeg');
-  background-size: 70%;
-  background-repeat:repeat-x;
-  background-position: 0% 100%;
-}
-.bg-texture{
-  background-image: url('../img/texture-bg2.jpg');
-  background-repeat: repeat;
-  background-position: 0% 0%;
-  background-size:80%;
-  background-size: fill;
-}
-.bg-blue{
-  background-image: url('../img/bg-blue.jpeg');
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-/* messagebox */
-/* light */
-.msg-light{
-  background-color: #FFFFFFF5 !important;
-  border:1px solid #FFFFFF44 !important;
-  border-radius: 6px;
-  box-shadow: 0px 0px 20px #00000033;
-}
-.msg-light .el-message-box__title{
-  font-size: 18px !important;
-  font-weight: bolder;
-  color:#000000CC !important;
-}
-.msg-light .el-message-box__message{
-  font-size: 14px !important;
-  text-align: justify !important;
-  word-break: normal !important;
-  word-wrap:break-word !important;
-  line-height: 22px;
-  color:#00000099 !important
-}
-.msg-light .el-message-box__content{
-  padding: 5px 15px;
-}
-.msg-light .el-message-box__errormsg{
-  min-height:5px;
-}
-.msg-light .el-input__wrapper{
-  background-color: #FFFFFF !important;
-  box-shadow: 0 0 0 1px #00000033;
-}
-.el-overlay{
-  background-color: #000000CC !important;
-}
-.msg-light .el-button{
-  padding: 0px 15px;
-  font-size:12px !important;
-  --el-button-bg-color:#FFFFFF;
-  --el-button-border-color:#00000030;
-  --el-button-text-color:#000000AA;
-  height: 25px;
-}
-.msg-light .el-button--primary{
-  --el-button-bg-color:var(--el-color-primary);
-  border:1px solid #00000030;
-  --el-button-text-color:#FFFFFF;
-}
-.msg-light .el-message-box__btns{
-  padding: 10px 15px 10px;
-}
-.msg-light .el-input__inner{
-  color: #000;
-}
-.msg-light .el-input__inner::placeholder{
-  color: #00000070;
-  font-weight: bolder !important;
-  font-size:12px;
-}
-/* dark */
-.msg-dark{
-  background-color: #000000DD !important;
-  border:1px solid #FFFFFF44 !important;
-  border-radius: 6px;
-  box-shadow: 0px 0px 20px #e9f2ff33;
-}
-.msg-dark .el-message-box__title{
-  font-size: 18px !important;
-  font-weight: bolder;
-  color:#FFFFFFCC !important;
-}
-.msg-dark .el-message-box__message{
-  font-size: 14px !important;
-  text-align: justify !important;
-  word-break: normal !important;
-  word-wrap:break-word !important;
-  line-height: 22px;
-  color:#FFFFFF99 !important
-}
-.msg-dark .el-message-box__content{
-  padding: 5px 15px;
-}
-.msg-dark .el-message-box__errormsg{
-  min-height:5px;
-}
-.msg-dark .el-input__wrapper{
-  background-color: #FFFFFF20 !important;
-  box-shadow: 0 0 0 1px #FFFFFF33;
-}
-.el-overlay{
-  background-color: #000000CC !important;
-}
-.msg-dark .el-button{
-  padding: 0px 15px;
-  font-size:12px !important;
-  --el-button-bg-color:#FFFFFF22;
-  --el-button-border-color:#FFFFFF22;
-  --el-button-text-color:#FFFFFFAA;
-  height: 25px;
-}
-.msg-dark .el-button--primary{
-  --el-button-bg-color:var(--el-color-primary);
-  --el-button-text-color:#FFFFFF;
-}
-.msg-dark .el-message-box__btns{
-  padding: 10px 15px 10px;
-}
-.msg-dark .el-input__inner{
-  color: #FFF;
-}
-.msg-dark .el-input__inner::placeholder{
-  color: #FFFFFF40;
-  font-size:12px;
-}
-/*  */
-.splitpanes__splitter{
-  position: relative;
-  background-color: #AAAAAA33;
-  transition: all;
-  transition-duration: 0.2s;
-}
-.splitpanes--vertical > .splitpanes__splitter{
-  width:1px;
-  height: 100%;
-}
-.splitpanes--horizontal > .splitpanes__splitter{
-  height:1px;
-  width: 100%;
-}
-.splitpanes--vertical > .splitpanes__splitter::before{
-  content:'';
-  position: absolute;
-  z-index: 2;
-  left:-1px !important;
-  background-color: rgb(218, 238, 255);
-  transition: all;
-  transition-duration: .2s;
-  transition-timing-function: ease-in;
-  height: 100%;
-  opacity:0;
-  width:3px;
-}
-.splitpanes--vertical > .splitpanes__splitter:hover::before{
-  left:-5px !important;
-  background-color: rgb(218, 238, 255);
-  opacity:1;
-  width:11px;
-}
-.splitpanes--horizontal > .splitpanes__splitter::before{
-  content:'';
-  position: absolute;
-  z-index: 2;
-  top:-1px !important;
-  left:0px !important;
-  background-color: rgb(218, 238, 255);
-  transition: all;
-  transition-duration: .2s;
-  width:100% !important;
-  opacity:0;
-  height:3px;
-}
-.splitpanes--horizontal > .splitpanes__splitter:hover::before{
-  top:-5px !important;
-  background-color: rgb(218, 238, 255);
-  opacity:1;
-  height:11px;
+  /* 背景图片 */
+  .bg-base{
+    background-color: #ebf2fa;
+    background-image: url('../img/bg-base.jpeg');
+    background-size: 70%;
+    background-repeat:repeat-x;
+    background-position: 0% 100%;
+  }
+  .bg-texture{
+    background-image: url('../img/texture-bg2.jpg');
+    background-repeat: repeat;
+    background-position: 0% 0%;
+    background-size:80%;
+    background-size: fill;
+  }
+  .bg-blue{
+    background-image: url('../img/bg-blue.jpeg');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+  }
 }
